CF-761: Fix Firefox print alignment

--- a/assets/stylesheets/coefficient/attachments.sass
+++ b/assets/stylesheets/coefficient/attachments.sass
@@ -4,7 +4,7 @@
 
 #attachments
   padding: 15px 0
-  overflow: hidden
+  @include clearfix
   .attachment-item
     float: left
     margin: 0 15px 15px 0
