--- a/assets/stylesheets/coefficient/print.sass
+++ b/assets/stylesheets/coefficient/print.sass
@@ -13,6 +13,12 @@
   .cl-mcont
     padding-top: 0 !important
 
+  #cl-wrapper,
+  .cl-mcont
+  #pcont,
+  .cl-mcont-wrapper
+    display: block
+
   a[href]:after
     content: ''
 
